# ChangeLog for sys-cluster/drbd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.117 2012/03/12 20:47:00 xarthisius Exp $

  12 Mar 2012; Kacper Kowalik <xarthisius@gentoo.org> drbd-8.3.12.ebuild,
  drbd-8.3.8.1-r1.ebuild, drbd-8.4.0.ebuild:
  Extend multilib fixes wrt bug 407961 by Robin Johnson <robbat2@gentoo.org>

  04 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> drbd-8.3.11-r1.ebuild:
  x86 stable wrt bug #396207

  28 Dec 2011; Agostino Sarubbo <ago@gentoo.org> drbd-8.3.11-r1.ebuild:
  Stable for AMD64, wrt bug #396207

  04 Dec 2011; Sven Wegener <swegener@gentoo.org> files/drbd-8.0.rc:
  move reload to extra_started_commands

*drbd-8.4.0 (03 Nov 2011)
*drbd-8.3.12 (03 Nov 2011)
*drbd-8.3.11-r1 (03 Nov 2011)

  03 Nov 2011; Ultrabug <ultrabug@gentoo.org> -drbd-8.3.11.ebuild,
  +drbd-8.3.11-r1.ebuild, +files/drbd-8.3.11-kernel3.patch,
  +drbd-8.3.12.ebuild, +drbd-8.4.0.ebuild:
  EAPI4, fix kernel >=3.1 detection thanks to Ivan Dorna, drop old, fix
  #379765.

*drbd-8.3.11 (10 Oct 2011)

  10 Oct 2011; Ultrabug <ultrabug@gentoo.org> -drbd-8.3.9.ebuild,
  +drbd-8.3.11.ebuild:
  Version bump wrt #379765, drop old unstable

  10 Aug 2011; Markos Chandras <hwoarang@gentoo.org> drbd-8.3.10.ebuild:
  Stable on amd64 wrt bug #377419

  08 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> drbd-8.3.10.ebuild:
  x86 stable wrt bug #377419

*drbd-8.3.10 (24 Jun 2011)

  24 Jun 2011; Kacper Kowalik <xarthisius@gentoo.org> +drbd-8.3.10.ebuild:
  Version bump wrt #372811

*drbd-8.3.7 (29 Apr 2011)

  29 Apr 2011; Ultrabug <ultrabug@gentoo.org> -drbd-8.3.6.ebuild,
  +drbd-8.3.7.ebuild:
  Add a drbd-8.3.7 version to match sys-kernel/xen-sources-2.6.34 userland
  needs. Fix bug #365005. Drop old. Thanks to Luca Lesinigo for reporting.

  26 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> drbd-8.3.9.ebuild:
  Disable global survey by default in example conf file wrt #360483 by robbat2
