@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/drbd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.117 2012/03/12 20:47:00 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.118 2012/03/28 14:07:24 xarthisius Exp $
+
+  28 Mar 2012; Kacper Kowalik <xarthisius@gentoo.org> drbd-8.3.12.ebuild,
+  drbd-8.3.8.1-r1.ebuild:
+  Fix overzealous sed that doesn't apply for <8.4.0 wrt bug 409981 by Marcin
+  Mirosław <bug@mejor.pl>
 
   12 Mar 2012; Kacper Kowalik <xarthisius@gentoo.org> drbd-8.3.12.ebuild,
   drbd-8.3.8.1-r1.ebuild, drbd-8.4.0.ebuild:
